new proj/src/objects/GE_HQ_GE_P_L_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>GE P&amp;L Strategies</relationshipLabel>
        <relationshipName>GE_P_L_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GE P&amp;L Strategies</relationshipLabel>
        <relationshipName>GE_P_L_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Competition__c</fullName>
        <label>Competition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Estimated_Total_Revenue__c</fullName>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Growth_Drivers__c</fullName>
        <label>Growth Drivers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_How_to_win__c</fullName>
        <label>How to win</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_NPIs_development__c</fullName>
        <label>NPIs development</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Potential_orders__c</fullName>
        <label>Potential orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Strategy_Status__c</fullName>
        <label>Strategy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Team_Comments__c</fullName>
        <label>Team Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>GE P&amp;L Strategy</label>
    <nameField>
        <label>GE P&amp;L Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GE P&amp;L Strategies</pluralLabel>
    <recordTypes>
        <fullName>GE_P_L_Strategy</fullName>
        <active>true</active>
        <description>Use this Record Type to Create GE P&amp;L Strategy</description>
        <label>GE P&amp;L Strategy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>